# Autonomous-Systems-Sub-Terrain-Challenge-GR04

./: .clang-format  .gitattributes  .gitignore  BUILD_FIXES_SUMMARY.md  FRONTIER_EXPLORATION_INTEGRATION.md  FRONTIER_INDEX.md  INTEGRATION_SUMMARY.md  QUICK_START_FRONTIER.md  README.md  Sub-Terrain-Challenge-GR04.code-workspace  build.bash  install_deps.sh  run.bash
angabe/: README.md
docs/: project_plan.mmd  state_diagram.mmd
ros2_ws/: final_map.bt  lanterns_log.csv
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/controller_pkg/lib/controller_pkg/: controller_node
ros2_ws/install/controller_pkg/share/controller_pkg/: package.dsv  package.ps1  package.sh
ros2_ws/install/mav_msgs/share/mav_msgs/: local_setup.sh  package.dsv  package.ps1  package.sh
ros2_ws/install/mav_planning_msgs/share/mav_planning_msgs/: local_setup.sh  package.dsv  package.ps1  package.sh
ros2_ws/install/simulation/lib/simulation/: Simulation.x86_64
ros2_ws/install/simulation/share/simulation/: package.dsv  package.ps1  package.sh
ros2_ws/log/: latest_build
ros2_ws/src/basic_waypoint_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/basic_waypoint_pkg/config/: trajectory_config.yaml
ros2_ws/src/basic_waypoint_pkg/include/basic_waypoint_pkg/: planner.hpp
ros2_ws/src/basic_waypoint_pkg/launch/: waypoint_mission.launch.py
ros2_ws/src/basic_waypoint_pkg/src/: planner.cc  planner_node.cc  waypoint_done_node.cpp
ros2_ws/src/controller_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/controller_pkg/config/: controller_params.yaml
ros2_ws/src/controller_pkg/include/controller_pkg/: controller_node.hpp
ros2_ws/src/controller_pkg/launch/: controller.launch.py
ros2_ws/src/controller_pkg/src/: controller_wrapper.cpp
ros2_ws/src/lantern_detector_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/lantern_detector_pkg/config/: params.yaml
ros2_ws/src/lantern_detector_pkg/include/lantern_detector_pkg/: lantern_detector_node.hpp
ros2_ws/src/lantern_detector_pkg/launch/: lantern_detector.launch.py
ros2_ws/src/lantern_detector_pkg/src/: lantern_detector_node.cpp
ros2_ws/src/mapping_pkg/: .gitignore  CMakeLists.txt  package.xml
ros2_ws/src/mapping_pkg/config/: octomap_params.yaml
ros2_ws/src/mapping_pkg/launch/: mapping.launch.py
ros2_ws/src/mav_msgs/include/mav_msgs/: common.hpp  conversions.hpp  default_topics.hpp  eigen_mav_msgs.hpp
ros2_ws/src/mav_planning_msgs/: CMakeLists.txt
ros2_ws/src/mav_planning_msgs/include/mav_planning_msgs/: conversions.hpp  conversions_deprecated.hpp  eigen_planning_msgs.hpp
ros2_ws/src/mav_trajectory_generation/: CMakeLists.txt  package.xml
ros2_ws/src/mav_trajectory_generation/include/mav_trajectory_generation/: convolution.h  extremum.h  io.h  motion_defines.h  polynomial.h  polynomial_optimization_linear.h  polynomial_optimization_nonlinear.h  ros_conversions.h  segment.h  test_utils.h  timing.h  trajectory.h  trajectory_sampler_node.hpp  trajectory_sampling.h  vertex.h
ros2_ws/src/mav_trajectory_generation/include/mav_trajectory_generation/impl/: polynomial_optimization_linear_impl.h  polynomial_optimization_nonlinear_impl.h
ros2_ws/src/mav_trajectory_generation/include/mav_trajectory_generation/rpoly/: rpoly_ak1.h
ros2_ws/src/mav_trajectory_generation/src/: io.cpp  motion_defines.cpp  polynomial.cpp  polynomial_timing_evaluation.cpp  ros_conversions.cpp  segment.cpp  timing.cpp  trajectory.cpp  trajectory_sampler_node.cpp  trajectory_sampling.cpp  vertex.cpp
ros2_ws/src/mav_trajectory_generation/src/rpoly/: rpoly_ak1.cpp
ros2_ws/src/mav_trajectory_generation/test/: test_polynomial.cpp  test_polynomial_optimization.cpp
ros2_ws/src/path_planning_pkg/: CMakeLists.txt  PATH_PLANNING_CONTRACT.md  package.xml
ros2_ws/src/path_planning_pkg/config/: exploration_params.yaml  octomap_slice_params.yaml  path_planning_params.yaml
ros2_ws/src/path_planning_pkg/include/: frontier_to_ompl.hpp  multi_slice_logic.hpp
ros2_ws/src/path_planning_pkg/include/path_planning_pkg/: modules.hpp  path_planner.h
ros2_ws/src/path_planning_pkg/launch/: exploration.launch.py  pathplanning.launch.py
ros2_ws/src/path_planning_pkg/src/: exploration_node.cpp  frontier_to_ompl.cpp  multi_slice_logic.cpp  octomap_slice_node.cpp  pathplanner.cpp  pathplanner.h  trajectory_generation.cpp
ros2_ws/src/path_planning_pkg_old/: CMakeLists.txt
ros2_ws/src/path_planning_pkg_old/config/: path_planning_params.yaml
ros2_ws/src/path_planning_pkg_old/include/path_planning_pkg/: path_planner_node.hpp
ros2_ws/src/path_planning_pkg_old/launch/: pathplanning.launch.py
ros2_ws/src/path_planning_pkg_old/src/: exploration_map.cpp  path_planner_node.cpp  planner_ompl.cpp  visualization.cpp
ros2_ws/src/simulation/: CMakeLists.txt  package.xml
ros2_ws/src/simulation/launch/: perception.launch.py  simulation.launch.py  unity_ros.launch.py
ros2_ws/src/simulation/src/: depth_camera_parser.h  fisheye_camera_parser.h  imu_parser.h  quadrotor_lcm.h  rgb_camera_parser.h  state_estimate_corruptor_node.cpp  true_state_parser.h  unity_command_stream.h  unity_ros.cpp  unity_state.cpp  unity_stream_parser.h  w_to_unity.cpp
ros2_ws/src/simulation/tcpimage/: TCPImageServer.cpp  TCPImageServer.h  TCPStreamReader.cpp  TCPStreamReader.h
ros2_ws/src/simulation/tcpimage/libsocket/: dgramclient.hpp  epoll.hpp  exception.hpp  inetbase.hpp  inetclientdgram.hpp  inetclientstream.hpp  inetdgram.hpp  inetserverdgram.hpp  inetserverstream.hpp  libinetsocket.h  (+10 more)
ros2_ws/src/statemachine_pkg/: CMakeLists.txt  STATEMACHINE_DESIGN.md  package.xml
ros2_ws/src/statemachine_pkg/config/: statemachine_params.yaml
ros2_ws/src/statemachine_pkg/launch/: statemachine.launch.py
ros2_ws/src/statemachine_pkg/msg/: Answer.msg  Command.msg
ros2_ws/src/statemachine_pkg/src/: backup_statemachine.cpp  statemachine.cpp  statemachine.h
simulation/Simulation_Data/: ScriptingAssemblies.json  globalgamemanagers  level0  level0.resS  sharedassets0.assets  sharedassets0.assets.resS
simulation/Simulation_Data/Resources/: unity_builtin_extra
simulation/Simulation_LQ_Data/: app.info
(+161 files in other folders)
